--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
-<<<<<<< HEAD
-
-=======
 /.metadata/
 /.recommenders/
+.classpath
+.project
 # Compiled class file
 *.class
 
@@ -26,4 +25,3 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
->>>>>>> branch 'master' of https://github.com/dupyo/baekjoon.git
